--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 
     <string name="app_name">ImageActivityTest</string>
 
-    <string name="myTextView">Какой-то текст!</string>
+    <string name="myTextView">TEXT</string>
     <string name="action_settings">Settings</string>
     <string name="sniper">sniperImg</string>
-    <string name="myButton">кнопка</string>
+    <string name="myButton">Куку, ёпта!</string>
 
 </resources>
